src/CocoRFiles/grammar.ATG
COMPILER Xml

CHARACTERS
    NameStartChar = ':' + 'A' .. 'Z' + '_' + 'a' .. 'z'.
    NameChar = NameStartChar + '.' + '-' + '0' .. '9'.
    Char = ANY - '-'.
    CharDataChar = ANY - '<' - '>' - '&' - '"' - '\'' - NameStartChar.
    cr  = '\r'.
    lf  = '\n'.
    tab = '\t'.

TOKENS
    Name = NameStartChar {NameChar}.
    CharData = CharDataChar {CharDataChar}.
    Comment = "<!--" {Char} "-->".
    XmlStart = "<?xml".
    XmlEnd = "?>".
    Eq = '='.
    Less = '<'.
    Slash = '/'.
    More = '>'.
    Quote = '\''.
    DoubleQuote = '"'.
    AND = '&'.

IGNORE cr + lf + tab

PRODUCTIONS
    Xml =
        Prolog Element {Comment}.

    Prolog =
        XmlStart Attribute [Attribute] XmlEnd.

    Element =
        IF( isEmptyElement() ) EmptyElementTag | STag Content ETag.

    STag =
        Less Name {Attribute} More.

    Attribute =
        Name Eq ((Quote {(CharData | Name)} Quote) | (DoubleQuote {(CharData | Name)} DoubleQuote)).

    ETag =
        Less Slash Name More.

    Content =
        { IF( anotherIteration() ) (Element | Comment | (CharData | Name | More | Quote | DoubleQuote | AND ))}.

    EmptyElementTag =
        Less Name {Attribute} Slash More.

END Xml.
